--- a/mode-settings/treemacs-settings.org
+++ b/mode-settings/treemacs-settings.org
@@ -1,7 +1,7 @@
 * Treemacs
 #+PROPERTY: header-args:elisp :load yes
 
-#+BEGIN_SRC elisp :load yes
+#+BEGIN_SRC elisp
 (literate-elisp-load "projectile-settings.org")
 
 (use-package
