--- a/mode-settings/config-modes-settings.org
+++ b/mode-settings/config-modes-settings.org
@@ -1,6 +1,6 @@
 * Config Modes
 #+PROPERTY: header-args:elisp :load yes
 ** Yaml
-#+begin_src emacs-lisp :tangle yes
+#+begin_src emacs-lisp :load yes
 (use-package yaml-mode :straight t)
 #+end_src
