--- a/mode-settings/path-settings.org
+++ b/mode-settings/path-settings.org
@@ -1,7 +1,6 @@
 * Path
-#+PROPERTY: header-args:elisp :load yes
-
-#+BEGIN_SRC elisp
+;#+PROPERTY: header-args:elisp :load yes
+#+BEGIN_SRC elisp :load yes
 (setq default-directory "~/")
 
 (use-package package :straight t)
