--- a/mode-settings/org-settings.org
+++ b/mode-settings/org-settings.org
@@ -69,7 +69,7 @@
 #+end_src
 ** Org Babel
 
-#+begin_src emacs-lisp :tangle yes
+#+begin_src emacs-lisp :load yes
 (use-package
  plantuml-mode
  :straight t
@@ -91,7 +91,7 @@
 
 
 
-#+begin_src emacs-lisp :tangle yes
+#+begin_src emacs-lisp :load yes
 
 (require 'colors-settings)
 (with-eval-after-load 'org
