--- a/mode-settings/config-modes-settings.org
+++ b/mode-settings/config-modes-settings.org
@@ -1,5 +1,5 @@
 * Config Modes
-#+PROPERTY: header-args:elisp :load yes
+#+PROPERTY: header-args:emacs-lisp :load yes
 ** Yaml
 #+begin_src emacs-lisp :load yes
 (use-package yaml-mode :straight t)
