--- a/mode-settings/dap-settings.org
+++ b/mode-settings/dap-settings.org
@@ -1,5 +1,5 @@
 * Debug Adapter Protocal (DAP)
-#+PROPERTY: header-args:elisp :load yes
+#+PROPERTY: header-args:emacs-lisp :load yes
 
 #+BEGIN_SRC elisp
 (straight-use-package 'dap-mode)
