--- a/mode-settings/elisp-settings.org
+++ b/mode-settings/elisp-settings.org
@@ -1,5 +1,5 @@
 * Elisp
-#+PROPERTY: header-args:elisp :load yes
+#+PROPERTY: header-args:emacs-lisp :load yes
 
 #+BEGIN_SRC elisp
 ;; elisp settings
