--- a/mode-settings/modeline-settings.org
+++ b/mode-settings/modeline-settings.org
@@ -1,5 +1,5 @@
 * Modeline
-#+PROPERTY: header-args:elisp :load yes
+#+PROPERTY: header-args:emacs-lisp :load yes
 
 #+BEGIN_SRC elisp
 (straight-use-package 'diminish)
