--- a/mode-settings/org-settings.org
+++ b/mode-settings/org-settings.org
@@ -1,5 +1,5 @@
 * Org Mode
-#+PROPERTY: header-args:elisp :load yes
+#+PROPERTY: header-args:emacs-lisp :load yes
 
 #+BEGIN_SRC elisp
 (setq ob-ipython-command "jupyter")
