--- a/mode-settings/parens-settings.org
+++ b/mode-settings/parens-settings.org
@@ -1,5 +1,5 @@
 * Parens
-#+PROPERTY: header-args:elisp :load yes
+#+PROPERTY: header-args:emacs-lisp :load yes
 
 #+BEGIN_SRC elisp
 (setq show-paren-when-point-inside-paren 't)
