--- a/mode-settings/term-settings.org
+++ b/mode-settings/term-settings.org
@@ -1,5 +1,5 @@
 * Terminal
-#+PROPERTY: header-args:elisp :load yes
+#+PROPERTY: header-args:emacs-lisp :load yes
 ** Vterm
 #+BEGIN_SRC elisp
 (use-package
