--- a/mode-settings/java-settings.org
+++ b/mode-settings/java-settings.org
@@ -1,5 +1,5 @@
 * Java/Javascript/JSON
-#+PROPERTY: header-args:elisp :load yes
+#+PROPERTY: header-args:emacs-lisp :load yes
 
 #+BEGIN_SRC elisp
 (straight-use-package 'jq-mode)
