--- a/mode-settings/lsp-settings.org
+++ b/mode-settings/lsp-settings.org
@@ -1,5 +1,5 @@
 * Language Server Protocol (LSP)
-#+PROPERTY: header-args:elisp :load yes
+#+PROPERTY: header-args:emacs-lisp :load yes
 
 #+BEGIN_SRC elisp
 (setq my/lsp-package "lsp")
