--- a/mode-settings/treemacs-settings.org
+++ b/mode-settings/treemacs-settings.org
@@ -1,5 +1,5 @@
 * Treemacs
-#+PROPERTY: header-args:elisp :load yes
+#+PROPERTY: header-args:emacs-lisp :load yes
 
 #+BEGIN_SRC elisp
 (literate-elisp-load "projectile-settings.org")
