--- a/mode-settings/colors-settings.org
+++ b/mode-settings/colors-settings.org
@@ -1,7 +1,7 @@
 * Colors and Theme
 #+PROPERTY: header-args:emacs-lisp :load yes
 ** Emacs Theme
-#+begin_src elisp :load yes
+#+begin_src emacs-lisp :load yes
 ;-------------COLOR THEME----------------;
 (if (eq window-system nil)
     (progn
@@ -19,7 +19,7 @@
 #+end_src
 
 ** Colors in Dired
-#+begin_src elisp :load yes
+#+begin_src emacs-lisp :load yes
 (use-package
  rainbow-mode
  :straight t
