--- a/mode-settings/elisp-settings.org
+++ b/mode-settings/elisp-settings.org
@@ -1,7 +1,7 @@
 * Elisp
 #+PROPERTY: header-args:emacs-lisp :load yes
 
-#+BEGIN_SRC elisp
+#+begin_src emacs-lisp
 ;; elisp settings
 (use-package eros :straight t :config (eros-mode t))
 (use-package
