--- a/mode-settings/global-settings.org
+++ b/mode-settings/global-settings.org
@@ -1,7 +1,7 @@
 * Global Settings for Editing
 #+PROPERTY: header-args:emacs-lisp :load yes
 
-#+BEGIN_SRC elisp
+#+begin_src emacs-lisp
 
 (setq native-comp-async-report-warnings-errors nil)
 ;; Show the line number of the cursor in the mode bar at the bottom of each buffer
@@ -417,7 +417,7 @@ yes
 * Global Keybindings
 #+PROPERTY: header-args:emacs-lisp :load yes
 
-#+BEGIN_SRC elisp
+#+begin_src emacs-lisp
 ;-------------CUSTOM KEYBINDINGS-----------;
 (global-set-key (kbd "M-k") 'kill-this-buffer)
 ;Window management
