--- a/mode-settings/latex-settings.org
+++ b/mode-settings/latex-settings.org
@@ -1,7 +1,7 @@
 * Latex
 #+PROPERTY: header-args:emacs-lisp :load yes
 
-#+BEGIN_SRC elisp
+#+begin_src emacs-lisp
 (use-package
  tex
  :straight auctex
