--- a/mode-settings/markdown-settings.org
+++ b/mode-settings/markdown-settings.org
@@ -1,7 +1,7 @@
 * Markdown
 #+PROPERTY: header-args:emacs-lisp :load yes
 
-#+BEGIN_SRC elisp
+#+begin_src emacs-lisp
 (use-package
  markdown-mode
  :straight t
