--- a/mode-settings/modeline-settings.org
+++ b/mode-settings/modeline-settings.org
@@ -1,7 +1,7 @@
 * Modeline
 #+PROPERTY: header-args:emacs-lisp :load yes
 
-#+BEGIN_SRC elisp
+#+begin_src emacs-lisp
 (straight-use-package 'diminish)
 (require 'diminish)
 (diminish 'anzu-mode)
