--- a/mode-settings/org-settings.org
+++ b/mode-settings/org-settings.org
@@ -1,7 +1,7 @@
 * Org Mode
 #+PROPERTY: header-args:emacs-lisp :load yes
 
-#+BEGIN_SRC elisp
+#+begin_src emacs-lisp
 (setq ob-ipython-command "jupyter")
 
 (defun org-src-format-and-save ()
