--- a/mode-settings/projectile-settings.org
+++ b/mode-settings/projectile-settings.org
@@ -1,7 +1,7 @@
 * Projectile
 #+PROPERTY: header-args:emacs-lisp :load yes
 
-#+BEGIN_SRC elisp
+#+begin_src emacs-lisp
 (use-package
  projectile
  :straight t
