--- a/mode-settings/python-settings.org
+++ b/mode-settings/python-settings.org
@@ -1,7 +1,7 @@
 * Python
 #+PROPERTY: header-args:emacs-lisp :load yes
 
-#+BEGIN_SRC elisp
+#+begin_src emacs-lisp
 (require 'python)
 (add-hook 'python-mode-hook 'tree-sitter-hl-mode)
 ;; (use-package
