--- a/mode-settings/rg-settings.org
+++ b/mode-settings/rg-settings.org
@@ -1,7 +1,7 @@
 * Ripgrep
 #+PROPERTY: header-args:emacs-lisp :load yes
 
-#+BEGIN_SRC elisp
+#+begin_src emacs-lisp
 (use-package
  wgrep
  :straight t
