--- a/mode-settings/snippets-settings.org
+++ b/mode-settings/snippets-settings.org
@@ -1,6 +1,6 @@
 * Snippets
 #+PROPERTY: header-args:emacs-lisp :load yes
-#+BEGIN_SRC elisp
+#+begin_src emacs-lisp
 (use-package yasnippet :straight t :demand t)
 (use-package yasnippet-snippets :straight t :demand t)
 (yas-global-mode 1)
