--- a/mode-settings/tramp-settings.org
+++ b/mode-settings/tramp-settings.org
@@ -1,7 +1,7 @@
 * TRAMP
 #+PROPERTY: header-args:emacs-lisp :load yes
 
-#+BEGIN_SRC elisp
+#+begin_src emacs-lisp
 ;; (straight-use-package 'counsel-tramp)
 
 
